kubernetes/ingress/path-base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test2.devopslearnwith.us  
      http:
        paths:
          - path: /app1   
            pathType: Prefix
            backend:
              service:
                name: app1-service   
                port:
                  number: 80
          - path: /app2   
            pathType: Prefix
            backend:
              service:
                name: app2-service   
                port:
                  number: 80
